--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.19.2",
+    "axios": "^0.26.1",
+    "better-scroll": "^2.4.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "fs": "^0.0.1-security",
+    "highlight.js": "^11.5.0",
+    "http-proxy-middleware": "^2.0.4",
+    "marked": "^3.0.8",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "request": "^2.88.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +46,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.2.2",
+    "router-dom": "^2.2.9",
+    "svg-sprite-loader": "^6.0.11"
+  },{
+    
   }
+
 }
