--- a/package.json
+++ b/package.json
@@ -63,10 +63,12 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "typed.js": "^2.0.12",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
+    "which": "^2.0.2",
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
