--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,13 @@
 # production
 /build
 
+/server/source/post/*.md
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-*.md
 
 npm-debug.log*
 yarn-debug.log*
