--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-react-app": "^7.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "express": "^4.17.3",
+    "express-formidable": "^1.2.0",
     "file-loader": "^6.2.0",
     "fs": "^0.0.1-security",
     "fs-extra": "^10.0.0",
@@ -41,10 +42,12 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "js-yaml": "^4.1.0",
     "marked": "^3.0.8",
     "mini-css-extract-plugin": "^2.4.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
     "postcss": "^8.4.4",
@@ -59,6 +62,7 @@
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
+    "react-transition-group": "^4.4.2",
     "request": "^2.88.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
@@ -164,6 +168,4 @@
       "react-activation/babel"
     ]
   }
-
-
 }
