全面重构,拥抱函数式组件

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.19.2",
+    "antd": "^4.22.8",
     "axios": "^0.26.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -21,13 +21,14 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "components": "^0.1.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
+    "eslint": "^8.23.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "express": "^4.17.3",
@@ -61,8 +62,14 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
+    "react-native-web": "^0.18.9",
+    "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
+    "react-responsive": "^9.0.0-beta.10",
+    "react-router": "^6.3.0",
+    "react-toggle": "^4.1.3",
     "react-transition-group": "^4.4.2",
+    "redux": "^4.2.0",
     "request": "^2.88.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
@@ -70,11 +77,13 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "styled": "^1.0.0",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
-    "toc-helper": "^2.0.1",
+    "toc-helper": "^2.1.0",
     "typed.js": "^2.0.12",
     "valine": "^1.4.18",
+    "waline": "^0.0.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
@@ -106,7 +115,8 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.2.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "react-router-dom": "^6.3.0",
     "router-dom": "^2.2.9",
     "svg-sprite-loader": "^6.0.11",
     "svgo-loader": "^3.0.0"
